Closure_91/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_91_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/3/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/3/com/google/javascript/jscomp/CheckGlobalThis_ESTest_scaffolding.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/3/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java:32: error: cannot find symbol
      node0.addSuppression("ma/cLH50T ");
           ^
  symbol:   method addSuppression(String)
  location: variable node0 of type Node
/home/liumengjiao/Desktop/CI/Evosuite/Closure_91/Closure/evosuite/3/com/google/javascript/jscomp/CheckGlobalThis_ESTest.java:244: error: cannot find symbol
      node1.addSuppression("ma/cLH50T ");
           ^
  symbol:   method addSuppression(String)
  location: variable node1 of type Node
2 errors
